scrollbar-fix

--- a/packages/apps/admin/src/container/AdminAppointmentDepartmentCheckinQuickMenu/appointment-approval.scss
+++ b/packages/apps/admin/src/container/AdminAppointmentDepartmentCheckinQuickMenu/appointment-approval.scss
@@ -161,7 +161,7 @@
     }
 
     .btn-action {
-        width: calc(25% - 10px);
+        width: calc(20% - 10px);
         margin-left: 10px;
         padding: 0;
         height: 42px;
